@@ -3,11 +3,18 @@ Hash: SHA256
 
 DIST raspberrypi-loader-0_p20120722.tar.xz 1110444 SHA256 5a43ebbfcc71990d82b6a44552cb16770f907ec5a7f10e16defb4de9d96afe2f SHA512 e1452234a9ff79684d12969359948e6e406709691d53d1d107477c9b7532837761cf5da65cceb7d176aee4bbfe9a559829289e2a7e41ef28136e3a12943452a0 WHIRLPOOL 9f429db9e216495d85554162679ed17446b46fef9c0cd6bead1df1e9401baf75f1deb36870cadec166dd31554dcc75073b7dc310c573a3a5740c934db6551239
 DIST raspberrypi-loader-0_p20121105.tar.xz 1262432 SHA256 99f8a50e8de5edd5c232f2926434cf89628028225c5e68476c978bead1592374 SHA512 a3ce2f9f4890db308543513060e43aa7254086d96465b79e5ee8310fe3aa4ba32975025ad381b24d28b0962f0505561d34a175915bc93d81a0c8c2c10dada2d1 WHIRLPOOL 356c804636574de714f0da893ada7ff2edb8792bd1f81e659a2fb165bc74a5b94512a80ef2aa665c171fbd7d3d0c3eeadc1fcacc126f127e3dcb1feb96b5a8f9
+DIST raspberrypi-loader-0_p20130705-bootcode.bin 17816 SHA256 f89d19c5287e566320ecd7e1d70d649f308a1b9d05a29d88a0768c3ba7a2bd14 SHA512 5332b2554cbdd3abb32f52506b851f7b3dc2c76a6f9040ec8ad946f6d9faf479e502dda11070aba7706d83e1c3839ff92ca8fbf8e79b972f91814dedbe19ea48 WHIRLPOOL 24e179152e392fc303e92cdfb8b4ef64e323736854bc826ddd0132a5652c9aa441027791781ff7f16fa7fb761485629977bd0882561b008fb66d4503be171e05
+DIST raspberrypi-loader-0_p20130705-fixup.dat 5890 SHA256 f70019ed5b4deacb09cbf209c0881555374d3cdf2d136b1a69cfd9bab4e441da SHA512 1fc7b31892fa768f901b05b4b5ebc952b393eeb65a91847fbd346ff636808e9c585d67351280c5250557aab2b15f3563b733ba592b859c13cbd206a7f72fe58f WHIRLPOOL b3c3b7920446693122dc438d99dbda65019fecad1ac18f5f17946d8ee9bfd701d958a2cee2ff8f7a0f78eebd79fb92149b92d5bdd0b94f8cc9d8743f70abf55c
+DIST raspberrypi-loader-0_p20130705-fixup_cd.dat 2022 SHA256 5cbecdc42a92dbbaa96d1d8c82712b6c3cfe448254ee62fcb6b0a303a86c64d5 SHA512 3d55ee733581d697762dfe39efbcad43ee24b6b369858736886918e539b7280c456d2a1dd7f0f1c07b2c83006e40756959c9f3b1ebc9c23f0bd834a21d1e2f76 WHIRLPOOL 386161d30e03c22f832265be3ae301927f10411c53b5cf2e1ab38d4b99351dc6ce732308409ee745fd763b0f3eb83335aaa791ef913a130cb724ba32c0eaeffb
+DIST raspberrypi-loader-0_p20130705-fixup_x.dat 8842 SHA256 356d1e0efc343545aa15edf81c6be943640082e0df92885f895eb31d8c9860bb SHA512 c186f76c12e3c649a4775385c6ce317fb75ed449996e9bdad63c3129ce8c4d29ac263c70d3a92d423bb61a0045cfa1fd2a46f9435e756ea10763d0417c20ca64 WHIRLPOOL db67c4f26a1b1a9ff0d39fe5cefe6695c976fff4b0df287c0d524bd5d828fee3faea1c3f12c22ce553f1c3bff9171864cc2b734e05983c0fabc32370c2277bf7
+DIST raspberrypi-loader-0_p20130705-start.elf 2690132 SHA256 324a40f565f49dcb63282133c2ae60c7d113c4a362a09c45d45918c6dba30ac9 SHA512 4e7e3c817936f576a2a033bbf95940804ac19ef133ece9c9603e56e97bee0a1aa46b107c714cb37018bc18bbc4dccbbfabaedc3a7d870eee262763e07130e9fc WHIRLPOOL 3feaf69da05d41bd98e4788f38b3ccf4865cfb8a8f53fd18f11a9689a8018fd0634dddfecc51d4ed118735523e234aa043f4dd649ba1d0081a69e9497c421558
+DIST raspberrypi-loader-0_p20130705-start_cd.elf 469176 SHA256 5035acc265979ff84a6c96ae6999ee51af9dc4db0630da2351f99500f8cb750e SHA512 5928bb24b476fed695c1a3b18ee19bd719e2f41cfa7af819d7cca27b123b21c304c894347a87fb2399faf59d544ea934b83517c4b9590d42d7e6bbf9155e8cac WHIRLPOOL dddb4d4dee3015e1dd2cbb259b2f1224cc4824890b52aeb407bcadb4e4e51b9a5db0770220e944ff0a522bfa37e0778509bdabf6a9194fd2799b66a1b537ca34
+DIST raspberrypi-loader-0_p20130705-start_x.elf 3657572 SHA256 9d2e0e7e41521f84de3d2a9ee9330757be0c69015dd47ee4987776284329d998 SHA512 fb815ed410c0d1672aec6d5c17a9f9db88ee8a11e2e637256e52566a26a6e72d5fa13030dec89f7e69efe52431edd87fe352f152b9899db1ed265f877c1833b3 WHIRLPOOL e4f8fa01b7d65a6bf8c70033280b589ff9d25e24cfaca4b27dcce58ba2a9fa6377c961df2acb4ae994f4426cc5df5e164dc5f70146a964f59fbe6bfbab8afba2
 DIST raspberrypi-loader-0_p20130705.tar.xz 2032392 SHA256 1e2d9dd73d4981c8cda6b668f4ceb7eec84377da7181ba0e73c3a2e1834fa80b SHA512 712b3416dfa62b7e433d0118a201ae00196afaebdca32c35db4888170dc680527e88771bd3f72871add68cae30bfba8f2e4ba509a1f8c616a630886fc951a8e6 WHIRLPOOL f5b80d4c93b7e04b2f81c779286406bbdce8d9824a7efc8acde77337077f2bd4803d6cd7501f379aade5e75847527596f15b91900c6124e0636cc0a3b663dcd2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iF4EAREIAAYFAlHd6swACgkQknrdDGLu8JCkOQD+N9uktQXKW8VY+YQeqXu9rgKN
-iBLMKDjL8NTPgfJTJcoA/0+lNdyENtamaxgF+axr1XDt4Jp24lTrpw2hDzxHETJ9
-=lg47
+iF4EAREIAAYFAlHd+/oACgkQknrdDGLu8JAYpgEAho9t61dO5SoMPYT3KOz25nBM
+6KsiMp9Cjd8XOIg5/e0A/0urUubViHRuMXAcErQ0nlhADBYVfK2/hFKn59VQ8YCH
+=NuHs
 -----END PGP SIGNATURE-----
