@@ -2,6 +2,12 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*raspberrypi-loader-0_p20130705-r1 (11 Jul 2013)
+
+  11 Jul 2013; Michael Weber <xmw@gentoo.org>
+  +raspberrypi-loader-0_p20130705-r1.ebuild:
+  Alternative ebuild without mirroring.
+
 *raspberrypi-loader-0_p20130705 (10 Jul 2013)
 
   10 Jul 2013; Michael Weber <xmw@gentoo.org>
